--- a/makerslist/static/less/navbar.less
+++ b/makerslist/static/less/navbar.less
@@ -119,6 +119,8 @@ div.navbar {
 
 @media only screen and (max-width: 870px) {
   div#app {
+    background-color: #eee!important;
+
     div.navbar {
       div.navbar-fixed {
         height: auto;
@@ -134,6 +136,10 @@ div.navbar {
               margin-top: 5px;
               margin-bottom: 15px;
             }
+
+            nav.search {
+              width: 100%;
+            }
           }
 
           ul.right {
@@ -147,6 +153,11 @@ div.navbar {
       background: none !important;
       width: 100%;
       box-shadow: none;
+      margin-top: 0;
+    }
+
+    >div.login.bogus {
+      margin-top: 15px;
     }
   }
 }
